--- a/styles/intro.css
+++ b/styles/intro.css
@@ -67,6 +67,7 @@ p{
 }
 .tag{
     font: var(--text-md);
+    color: var(--gray-200);
     background-color: var(--gray-400);
     padding: 8px 16px;
     border-radius: 999px;
