--- a/styles/global.css
+++ b/styles/global.css
@@ -34,6 +34,9 @@ body{
   color: var(--gray-100);
   background-color: var(--gray-500);
 }
+h1{
+  font: var(--title-md)
+}
 .mark{
   color: var(--red);
 }
