--- a/styles/projects.css
+++ b/styles/projects.css
@@ -27,6 +27,9 @@
   padding-block: 12px 17px;
   padding-inline: 12px;
   border-radius: 8px;
+  &:hover{
+    border: 1.5px solid var(--gray-300);
+  }
 }
 #projects .grid figcaption{
   display: flex;
