--- a/styles/contact.css
+++ b/styles/contact.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 56px;
-  background-image: url(/assets/Background_Contacts.png);
+  background-image: url(../assets/Background_Contacts.png);
   background-size: cover;
   background-position: center;
   padding-block: 128px 200px;
