--- a/styles/intro.css
+++ b/styles/intro.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   gap: 80px;
-  background-image: url(/assets/Background_Intro.png);
+  background-image: url(../assets/Background_Intro.png);
   background-size: cover;
   background-position: center;
 }
